--- a/Week3/100-pandas-puzzles.ipynb
+++ b/Week3/100-pandas-puzzles.ipynb
@@ -41,12 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -62,15 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.2.2'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.__version__"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,15 +88,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "INSTALLED VERSIONS\n",
+      "------------------\n",
+      "commit           : 7d32926db8f7541c356066dcadabf854487738de\n",
+      "python           : 3.9.1.final.0\n",
+      "python-bits      : 64\n",
+      "OS               : Windows\n",
+      "OS-release       : 10\n",
+      "Version          : 10.0.19041\n",
+      "machine          : AMD64\n",
+      "processor        : Intel64 Family 6 Model 142 Stepping 12, GenuineIntel\n",
+      "byteorder        : little\n",
+      "LC_ALL           : None\n",
+      "LANG             : None\n",
+      "LOCALE           : English_United States.1252\n",
+      "\n",
+      "pandas           : 1.2.2\n",
+      "numpy            : 1.20.1\n",
+      "pytz             : 2021.1\n",
+      "dateutil         : 2.8.1\n",
+      "pip              : 21.0.1\n",
+      "setuptools       : 52.0.0\n",
+      "Cython           : None\n",
+      "pytest           : None\n",
+      "hypothesis       : None\n",
+      "sphinx           : None\n",
+      "blosc            : None\n",
+      "feather          : None\n",
+      "xlsxwriter       : None\n",
+      "lxml.etree       : None\n",
+      "html5lib         : None\n",
+      "pymysql          : None\n",
+      "psycopg2         : None\n",
+      "jinja2           : 2.11.3\n",
+      "IPython          : 7.20.0\n",
+      "pandas_datareader: None\n",
+      "bs4              : None\n",
+      "bottleneck       : None\n",
+      "fsspec           : None\n",
+      "fastparquet      : None\n",
+      "gcsfs            : None\n",
+      "matplotlib       : 3.3.4\n",
+      "numexpr          : None\n",
+      "odfpy            : None\n",
+      "openpyxl         : None\n",
+      "pandas_gbq       : None\n",
+      "pyarrow          : None\n",
+      "pyxlsb           : None\n",
+      "s3fs             : None\n",
+      "scipy            : 1.6.1\n",
+      "sqlalchemy       : None\n",
+      "tables           : None\n",
+      "tabulate         : None\n",
+      "xarray           : None\n",
+      "xlrd             : None\n",
+      "xlwt             : None\n",
+      "numba            : None\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "pd.show_versions()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,12 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -141,7 +206,7 @@
     "\n",
     "labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
     "\n",
-    "df = # (complete this line of code)"
+    "df = pd.DataFrame(data, index = labels)"
    ]
   },
   {
@@ -153,15 +218,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 10 entries, a to j\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   animal    10 non-null     object \n",
+      " 1   age       8 non-null      float64\n",
+      " 2   visits    10 non-null     int64  \n",
+      " 3   priority  10 non-null     object \n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 400.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,15 +254,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>animal</th>\n",
+       "      <th>age</th>\n",
+       "      <th>visits</th>\n",
+       "      <th>priority</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>snake</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  animal  age  visits priority\n",
+       "a    cat  2.5       1      yes\n",
+       "b    cat  3.0       3      yes\n",
+       "c  snake  0.5       2       no"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,15 +337,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>animal</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>snake</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>g</th>\n",
+       "      <td>snake</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>h</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>j</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  animal  age\n",
+       "a    cat  2.5\n",
+       "b    cat  3.0\n",
+       "c  snake  0.5\n",
+       "d    dog  NaN\n",
+       "e    dog  5.0\n",
+       "f    cat  2.0\n",
+       "g  snake  4.5\n",
+       "h    cat  NaN\n",
+       "i    dog  7.0\n",
+       "j    dog  3.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['animal', 'age']]"
+   ]
   },
   {
    "cell_type": "markdown",
