Added feedback for my own groups lesson

--- a/JigsawLessons/bar_graphs.ipynb
+++ b/JigsawLessons/bar_graphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "developed-tactics",
+   "id": "significant-fields",
    "metadata": {},
    "source": [
     "# Bar Graphs \n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vital-antique",
+   "id": "therapeutic-enforcement",
    "metadata": {},
    "source": [
     "# Plot a Bar Graph in Seaborn\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "optimum-virtue",
+   "id": "disciplinary-bahamas",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "enclosed-fantasy",
+   "id": "corporate-citizen",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governmental-midnight",
+   "id": "sought-board",
    "metadata": {},
    "source": [
     "# Plot Grouped Bar Chart\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "overall-frequency",
+   "id": "prospective-factor",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polish-discount",
+   "id": "still-equipment",
    "metadata": {
     "tags": []
    },
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "adverse-competition",
+   "id": "extreme-update",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "colonial-making",
+   "id": "hundred-douglas",
    "metadata": {},
    "source": [
     "#### Try Yourself Problem 2: \n",
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "prescribed-greensboro",
+   "id": "billion-inquiry",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rental-translation",
+   "id": "horizontal-abraham",
    "metadata": {},
    "source": [
     "# You can also create a bar plot from your own dataset. Try the following problem..."
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chinese-handbook",
+   "id": "assumed-birth",
    "metadata": {},
    "source": [
     "#### Try Yourself Problem 3:\n",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "exact-camera",
+   "id": "quarterly-geography",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statistical-tournament",
+   "id": "communist-avenue",
    "metadata": {},
    "source": [
     "# Plot a Horizontal Bar Plot\n",
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "auburn-planning",
+   "id": "light-syndrome",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unusual-uncle",
+   "id": "aging-arbor",
    "metadata": {},
    "source": [
     "#### Try Yourself Problem 4:\n",
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "unlimited-arrangement",
+   "id": "criminal-walter",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solved-width",
+   "id": "tropical-marriage",
    "metadata": {},
    "source": [
     "# Ordering Grouped Bars in a Bar Plot \n",
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "mathematical-optimization",
+   "id": "retired-vaccine",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liable-leeds",
+   "id": "adjacent-education",
    "metadata": {},
    "source": [
     "# Change Confidence Interval\n",
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "least-exchange",
+   "id": "honey-shield",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experienced-abortion",
+   "id": "hungarian-syndrome",
    "metadata": {},
    "source": [
     "#### Try Yourself Problem 5:\n",
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "working-johnston",
+   "id": "posted-thirty",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "helpful-broadway",
+   "id": "false-flavor",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flexible-intent",
+   "id": "institutional-signal",
    "metadata": {},
    "source": [
     "### Recap\n",
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solar-maria",
+   "id": "prepared-dispute",
    "metadata": {},
    "source": [
     "# Conclusion\n",
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "usual-green",
+   "id": "dying-toner",
    "metadata": {},
    "source": [
     "##### Try Yourself Problem 6:\n",
@@ -573,12 +573,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "liberal-bolivia",
+   "cell_type": "markdown",
+   "id": "small-friday",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Feedback"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "industrial-tampa",
+   "metadata": {},
+   "source": [
+    "Overall this was a very good lesson bar graphs and included a good mix of examples and problems. A little more information at the beginning regarding when bar graphs are used and "
+   ]
   }
  ],
  "metadata": {
