Updated ethical concerns

--- a/Midterm/Week5/MidtermProject-Background.ipynb
+++ b/Midterm/Week5/MidtermProject-Background.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "signal-monkey",
+   "id": "lesbian-liabilities",
    "metadata": {},
    "source": [
-    "# CISC367 Midterm Project - Background"
+    "# Midterm Ideas"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "coordinate-basin",
+   "id": "talented-granny",
    "metadata": {},
    "source": [
     "*Ishaan Thakker*"
@@ -18,23 +18,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "separate-glasgow",
+   "id": "cleared-charger",
    "metadata": {},
    "source": [
-    "The problem that I will be exploring with this project is related to how switching to electric vehicles can help climate change and taking advantage of government rebates can help make this process cheaper. "
+    "**Problem:**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "minimal-simple",
+   "id": "better-bulletin",
    "metadata": {},
    "source": [
-    "## Questions to answer:"
+    "Climate change has been recognized as the foremost environmental problem of the twenty-first century and has become a subject of considerable debate. It is predicted to lead to adverse, irreversible impacts oil earth and the ecosystem as a whole.<sup>2</sup> I plan to explore the topic of electric vehicle adoption in Delaware and compare the data to different parts of the country to see where we rank. I also plan to look at data regarding rebates and how the government is getting people to switch to EVs"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "subtle-transition",
+   "id": "major-frequency",
+   "metadata": {},
+   "source": [
+    "**Questions to answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "thick-printer",
    "metadata": {},
    "source": [
     "* Why aren't more Delawareans switching to electric vehicles?\n",
@@ -45,57 +53,76 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emotional-blocking",
+   "id": "gentle-essay",
    "metadata": {},
    "source": [
-    "## Justification:"
+    "**Justification:**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adjusted-peter",
+   "id": "manual-stanley",
    "metadata": {},
    "source": [
-    "This problem is important because climate change is a increasingly important topic in todays society. If more people try to realize this and take advantage of benefits provided by the government soon enough a majority of the cars bought will be electric. By exploring what age groups own EVs the most, the data can be used to target specifc audiences who may not be fully inclined to purchasing EVs as other age groups. Geographical location is also important so I will be comparing the EV usage in Delaware to the rest of the country. There are also many benefits to driving electric vehicles including reduced emissions, save costs for gas, and can improve public health and ecological damage. (https://www.energy.gov/eere/electricvehicles/electric-vehicle-benefits#:~:text=They%20can%20reduce%20emissions%20and,and%20have%20very%20good%20torque.&text=But%20EVs%20provide%20more%20than%20just%20individual%20benefits.) "
+    "This problem is important because climate change is a increasingly important topic in todays society. If more people try to realize this and take advantage of benefits provided by the government soon enough a majority of the cars bought will be electric. By exploring what age groups own EVs the most, the data can be used to target specifc audiences who may not be fully inclined to purchasing EVs as other age groups. Geographical location is also important so I will be comparing the EV usage in Delaware to the rest of the country. There are also many benefits to driving electric vehicles including reduced emissions, save costs for gas, and can improve public health and ecological damage.<sup>1</sup> "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "editorial-accordance",
+   "id": "guilty-alignment",
    "metadata": {},
    "source": [
-    "## Datasets:"
+    "**Datasets:**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "trying-shield",
+   "id": "supported-terrain",
    "metadata": {},
    "source": [
-    "1. [Registered Vehicles by Fuel Type] (https://data.delaware.gov/Transportation/Registered-Vehicles-by-Fuel-Type/ity3-3688)\n",
-    "2. [State Rebates for Alternative Fuel Vehicles] (https://data.delaware.gov/Energy-and-Environment/State-Rebates-for-Alternative-Fuel-Vehicles/8z8z-di7f)"
+    "1. [Registered Vehicles by Fuel Type](https://data.delaware.gov/Transportation/Registered-Vehicles-by-Fuel-Type/ity3-3688)\n",
+    "2. [State Rebates for Alternative Fuel Vehicles](https://data.delaware.gov/Energy-and-Environment/State-Rebates-for-Alternative-Fuel-Vehicles/8z8z-di7f)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fluid-shoulder",
+   "id": "seasonal-judgment",
    "metadata": {},
    "source": [
-    "## Ethical Concerns:"
+    "**Ethical Concerns:**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fifty-gardening",
+   "id": "quality-cameroon",
    "metadata": {},
    "source": [
-    "One problem/ethical concern I may come across while analyzing the data is that I may not a large enough sample since electric vehicle adoption is fairly new and since the population of Delaware is fairly small compared to other states this might lead to inaccurate conclusions. Other than that for now I cannot think of many other concerns that I may have regarding this topic. As I analyze the data and topic further I will record the complications that I run into."
+    "Some ethical concerns that I have is that there is a large number of people who still believe that climate change is a hoax or that nothing can be done to change the environment but this is certainly not true. Another concern is that electric cars only made up only about 2 percent of new passenger vehicle sales in 2020 and this is cause for conern because more companies should start to produce electric cars. If known brands start switching over to electric car manufacturing then more people are inclined to switch.Electric cars made up only about 2 percent of new passenger vehicle sales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "starting-whale",
+   "metadata": {},
+   "source": [
+    "**References**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "square-suffering",
+   "metadata": {},
+   "source": [
+    "<sup>1</sup> \n",
+    "https://www.energy.gov/eere/electricvehicles/electric-vehicle-benefits#:~:text=They%20can%20reduce%20emissions%20and,and%20have%20very%20good%20torque.&text=But%20EVs%20provide%20more%20than%20just%20individual%20benefits\n",
+    "<sup>2</sup>\n",
+    "https://www.researchgate.net/publication/215652750_Global_Climate_Change_A_cause_of_concern"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "manufactured-marriage",
+   "id": "forbidden-failure",
    "metadata": {},
    "outputs": [],
    "source": []
