Updated ethical concerns

--- a/Midterm/Week5/MidtermProject-Background.ipynb
+++ b/Midterm/Week5/MidtermProject-Background.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "lesbian-liabilities",
+   "id": "willing-quebec",
    "metadata": {},
    "source": [
     "# Midterm Ideas"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "talented-granny",
+   "id": "written-aside",
    "metadata": {},
    "source": [
     "*Ishaan Thakker*"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cleared-charger",
+   "id": "checked-overview",
    "metadata": {},
    "source": [
     "**Problem:**"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "better-bulletin",
+   "id": "abroad-portal",
    "metadata": {},
    "source": [
     "Climate change has been recognized as the foremost environmental problem of the twenty-first century and has become a subject of considerable debate. It is predicted to lead to adverse, irreversible impacts oil earth and the ecosystem as a whole.<sup>2</sup> I plan to explore the topic of electric vehicle adoption in Delaware and compare the data to different parts of the country to see where we rank. I also plan to look at data regarding rebates and how the government is getting people to switch to EVs"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "major-frequency",
+   "id": "straight-stationery",
    "metadata": {},
    "source": [
     "**Questions to answer:**"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thick-printer",
+   "id": "previous-november",
    "metadata": {},
    "source": [
     "* Why aren't more Delawareans switching to electric vehicles?\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gentle-essay",
+   "id": "junior-progress",
    "metadata": {},
    "source": [
     "**Justification:**"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manual-stanley",
+   "id": "approximate-church",
    "metadata": {},
    "source": [
     "This problem is important because climate change is a increasingly important topic in todays society. If more people try to realize this and take advantage of benefits provided by the government soon enough a majority of the cars bought will be electric. By exploring what age groups own EVs the most, the data can be used to target specifc audiences who may not be fully inclined to purchasing EVs as other age groups. Geographical location is also important so I will be comparing the EV usage in Delaware to the rest of the country. There are also many benefits to driving electric vehicles including reduced emissions, save costs for gas, and can improve public health and ecological damage.<sup>1</sup> "
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "guilty-alignment",
+   "id": "willing-disaster",
    "metadata": {},
    "source": [
     "**Datasets:**"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supported-terrain",
+   "id": "classified-charleston",
    "metadata": {},
    "source": [
     "1. [Registered Vehicles by Fuel Type](https://data.delaware.gov/Transportation/Registered-Vehicles-by-Fuel-Type/ity3-3688)\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seasonal-judgment",
+   "id": "diagnostic-pocket",
    "metadata": {},
    "source": [
     "**Ethical Concerns:**"
@@ -94,15 +94,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quality-cameroon",
+   "id": "former-health",
    "metadata": {},
    "source": [
-    "Some ethical concerns that I have is that there is a large number of people who still believe that climate change is a hoax or that nothing can be done to change the environment but this is certainly not true. Another concern is that electric cars only made up only about 2 percent of new passenger vehicle sales in 2020 and this is cause for conern because more companies should start to produce electric cars. If known brands start switching over to electric car manufacturing then more people are inclined to switch.Electric cars made up only about 2 percent of new passenger vehicle sales"
+    "Some ethical concerns that I have is that there is a large number of people who still believe that climate change is a hoax or that nothing can be done to change the environment but this is certainly not true. Another concern is that electric cars only made up only about 2 percent of new passenger vehicle sales in 2020 and this is cause for conern because more companies should start to produce electric cars. If known brands start switching over to electric car manufacturing then more people are inclined to switch.<sup>3</sup> I plan to explore more concenrs as I continue research."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "starting-whale",
+   "id": "excellent-phoenix",
    "metadata": {},
    "source": [
     "**References**"
@@ -110,19 +110,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "square-suffering",
+   "id": "quick-southeast",
    "metadata": {},
    "source": [
     "<sup>1</sup> \n",
     "https://www.energy.gov/eere/electricvehicles/electric-vehicle-benefits#:~:text=They%20can%20reduce%20emissions%20and,and%20have%20very%20good%20torque.&text=But%20EVs%20provide%20more%20than%20just%20individual%20benefits\n",
     "<sup>2</sup>\n",
-    "https://www.researchgate.net/publication/215652750_Global_Climate_Change_A_cause_of_concern"
+    "https://www.researchgate.net/publication/215652750_Global_Climate_Change_A_cause_of_concern\n",
+    "<sup>3</sup>\n",
+    "https://insideclimatenews.org/news/21122020/electric-vehicles-in-2020/"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "forbidden-failure",
+   "id": "lonely-genealogy",
    "metadata": {},
    "outputs": [],
    "source": []
