Changed questions for midterm project

--- a/Midterm/Week5/MidtermProject-Background.ipynb
+++ b/Midterm/Week5/MidtermProject-Background.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "tired-grammar",
+   "id": "caring-sunday",
    "metadata": {},
    "source": [
     "# Midterm Ideas"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assumed-outline",
+   "id": "enormous-prompt",
    "metadata": {},
    "source": [
     "*Ishaan Thakker*"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dying-huntington",
+   "id": "quarterly-handy",
    "metadata": {},
    "source": [
     "**Problem:**"
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "obvious-renaissance",
+   "id": "mediterranean-transportation",
    "metadata": {},
    "source": [
-    "Climate change has been recognized as the foremost environmental problem of the twenty-first century and has become a subject of considerable debate. It is predicted to lead to adverse, irreversible impacts oil earth and the ecosystem as a whole.<sup>2</sup> I plan to explore the topic of electric vehicle adoption in Delaware and compare the data to different parts of the country to see where we rank. I also plan to look at data regarding rebates and how the government is getting people to switch to EVs"
+    "Climate change has been recognized as the foremost environmental problem of the twenty-first century and has become a subject of considerable debate. It is predicted to lead to adverse, irreversible impacts oil earth and the ecosystem as a whole.<sup>2</sup> I plan to explore the topic of electric vehicle adoption in the US and compare the data to see how we rank against different countries. I also plan to look at data regarding rebates and how the government is getting people to switch to EVs."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "consistent-award",
+   "id": "qualified-furniture",
    "metadata": {},
    "source": [
     "**Questions to answer:**"
@@ -42,18 +42,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "editorial-favor",
+   "id": "tired-verse",
    "metadata": {},
    "source": [
-    "* Why aren't more Delawareans switching to electric vehicles?\n",
+    "* Why aren't more Americans switching to electric vehicles?\n",
     "* How many people have taken advantage of electric vehicle rebates?\n",
     "* What age group tends to drive EV's the most?\n",
-    "* How does Delaware rank compared to other states when it comes to EVs"
+    "* How does the US rank compared to other countries when it comes to EVs?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "medium-tours",
+   "id": "modern-operation",
    "metadata": {},
    "source": [
     "**Justification:**"
@@ -61,15 +61,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "criminal-evans",
+   "id": "prescription-master",
    "metadata": {},
    "source": [
-    "This problem is important because climate change is a increasingly important topic in todays society. If more people try to realize this and take advantage of benefits provided by the government soon enough a majority of the cars bought will be electric. By exploring what age groups own EVs the most, the data can be used to target specifc audiences who may not be fully inclined to purchasing EVs as other age groups. Geographical location is also important so I will be comparing the EV usage in Delaware to the rest of the country. There are also many benefits to driving electric vehicles including reduced emissions, save costs for gas, and can improve public health and ecological damage.<sup>1</sup> "
+    "This problem is important because climate change is a increasingly important topic in todays society. If more people try to realize this and take advantage of benefits provided by the government soon enough a majority of the cars bought will be electric. By exploring what age groups own EVs the most, the data can be used to target specifc audiences who may not be fully inclined to purchasing EVs as other age groups. I will be comparing the EV usage in the US to other parts of the world. This will shed light on where we rank when it comes to EV adoption. There are also many benefits to driving electric vehicles including reduced emissions, save costs for gas, and can improve public health and ecological damage.<sup>1</sup> "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "resistant-catalog",
+   "id": "advisory-brick",
    "metadata": {},
    "source": [
     "**Datasets:**"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-penguin",
+   "id": "supposed-madness",
    "metadata": {},
    "source": [
     "1. [Registered Vehicles by Fuel Type](https://data.delaware.gov/Transportation/Registered-Vehicles-by-Fuel-Type/ity3-3688)\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "level-mambo",
+   "id": "incoming-issue",
    "metadata": {},
    "source": [
     "**Ethical Concerns:**"
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tight-helping",
+   "id": "later-revelation",
    "metadata": {},
    "source": [
     "Some ethical concerns that I have is that there is a large number of people who still believe that climate change is a hoax or that nothing can be done to change the environment but this is certainly not true. Another concern is that electric cars only made up only about 2 percent of new passenger vehicle sales in 2020 and this is cause for conern because more companies should start to produce electric cars. If known brands start switching over to electric car manufacturing then more people are inclined to switch.<sup>3</sup> I plan to explore more concenrs as I continue research."
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "special-counter",
+   "id": "likely-trustee",
    "metadata": {},
    "source": [
     "**References**"
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mobile-jewelry",
+   "id": "supported-volume",
    "metadata": {},
    "source": [
     "<sup>1</sup> \n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "remarkable-asset",
+   "id": "judicial-bryan",
    "metadata": {},
    "outputs": [],
    "source": []
