Completely new topic

--- a/Midterm/Week5/MidtermProject-Background.ipynb
+++ b/Midterm/Week5/MidtermProject-Background.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "caring-sunday",
+   "id": "postal-norfolk",
    "metadata": {},
    "source": [
     "# Midterm Ideas"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enormous-prompt",
+   "id": "every-burden",
    "metadata": {},
    "source": [
     "*Ishaan Thakker*"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quarterly-handy",
+   "id": "sapphire-comment",
    "metadata": {},
    "source": [
     "**Problem:**"
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mediterranean-transportation",
+   "id": "surgical-lover",
    "metadata": {},
    "source": [
-    "Climate change has been recognized as the foremost environmental problem of the twenty-first century and has become a subject of considerable debate. It is predicted to lead to adverse, irreversible impacts oil earth and the ecosystem as a whole.<sup>2</sup> I plan to explore the topic of electric vehicle adoption in the US and compare the data to see how we rank against different countries. I also plan to look at data regarding rebates and how the government is getting people to switch to EVs."
+    "If there is one thing that has increased dramatically during this pandemic, it is the increased exposure to the stock market for new investors. These new investors who sense a generational buying moment due to the pandemic do not have much background in this equity space.<sup>1</sup> The four major online brokers - Charles Schwab, TD Ameritrade, ETrade, and Robinhood saw new accounts grow as much as 170% in the first quarter of 2020.<sup>2</sup> Because of this, it is important for people to realize how to manage and mitigate risk when investing in the stock market. I plan to explore different stock tickers datasets to analyze the risk when investing in particular stocks."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "qualified-furniture",
+   "id": "neither-solomon",
    "metadata": {},
    "source": [
     "**Questions to answer:**"
@@ -42,18 +42,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tired-verse",
+   "id": "ahead-windsor",
    "metadata": {},
    "source": [
-    "* Why aren't more Americans switching to electric vehicles?\n",
-    "* How many people have taken advantage of electric vehicle rebates?\n",
-    "* What age group tends to drive EV's the most?\n",
-    "* How does the US rank compared to other countries when it comes to EVs?"
+    "* What is the change in a stocks price over time?\n",
+    "* What do terms such as moving average and volatility mean?\n",
+    "* How can you decrease risk and increase return with stocks?\n",
+    "* What is the correlation between daily returns of different stocks?\n",
+    "* How much value do we put at risk when investing in a particular company?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "modern-operation",
+   "id": "sharing-bicycle",
    "metadata": {},
    "source": [
     "**Justification:**"
@@ -61,15 +62,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prescription-master",
+   "id": "respective-midnight",
    "metadata": {},
    "source": [
-    "This problem is important because climate change is a increasingly important topic in todays society. If more people try to realize this and take advantage of benefits provided by the government soon enough a majority of the cars bought will be electric. By exploring what age groups own EVs the most, the data can be used to target specifc audiences who may not be fully inclined to purchasing EVs as other age groups. I will be comparing the EV usage in the US to other parts of the world. This will shed light on where we rank when it comes to EV adoption. There are also many benefits to driving electric vehicles including reduced emissions, save costs for gas, and can improve public health and ecological damage.<sup>1</sup> "
+    "This problem is important because risk management helps cut down losses and this is real peoples savings that are at stake. It is important for people to learn and realize that doing research can help them make important decisions regarding their money. If people can have a basic set of knowledge they will be able to expand on that and eventually can do their own due diligence. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "advisory-brick",
+   "id": "developed-thermal",
    "metadata": {},
    "source": [
     "**Datasets:**"
@@ -77,16 +78,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-madness",
+   "id": "existing-sharp",
    "metadata": {},
    "source": [
-    "1. [Registered Vehicles by Fuel Type](https://data.delaware.gov/Transportation/Registered-Vehicles-by-Fuel-Type/ity3-3688)\n",
-    "2. [State Rebates for Alternative Fuel Vehicles](https://data.delaware.gov/Energy-and-Environment/State-Rebates-for-Alternative-Fuel-Vehicles/8z8z-di7f)"
+    "1. [Example Ticker: AAPL](https://finance.yahoo.com/quote/AAPL/history?p=AAPL)\n",
+    "2. [Example Ticker: S&P 500](https://finance.yahoo.com/quote/%5EGSPC/history?p=%5EGSPC)\n",
+    "3. Pandas data-reader"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "incoming-issue",
+   "id": "metric-companion",
    "metadata": {},
    "source": [
     "**Ethical Concerns:**"
@@ -94,15 +96,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "later-revelation",
+   "id": "affiliated-marks",
    "metadata": {},
    "source": [
-    "Some ethical concerns that I have is that there is a large number of people who still believe that climate change is a hoax or that nothing can be done to change the environment but this is certainly not true. Another concern is that electric cars only made up only about 2 percent of new passenger vehicle sales in 2020 and this is cause for conern because more companies should start to produce electric cars. If known brands start switching over to electric car manufacturing then more people are inclined to switch.<sup>3</sup> I plan to explore more concenrs as I continue research."
+    "The ethical concerns relating to this problem are actually quite significant. First, people should never take anyones research and base it as their own when deciding to invest. It is important to learn key terms in the market before starting to invest. The research I will be doing only applies to my understand of stocks based on prior experience. That is not to say that people should not view my research it is simply to make sure each person does their own due diligence. Second, as I am sure most people are aware of the trading frenzy that went on with retail stocks such as GameStop (GME) it is **essential** that the market is never treated like a casino. Reddit fueled investing has spoiled the idea that stocks are an easy way to make \"quick money\". This is absolutely not how it works and my research will create a general idea of different terms and correlation between companies. I plan to look explore a little into these retail stocks which took over the market and explain how the risk in investing in them is far beyond than what the actual market brings."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "likely-trustee",
+   "id": "promotional-identity",
    "metadata": {},
    "source": [
     "**References**"
@@ -110,26 +112,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supported-volume",
+   "id": "genuine-survivor",
    "metadata": {},
    "source": [
     "<sup>1</sup> \n",
-    "https://www.energy.gov/eere/electricvehicles/electric-vehicle-benefits#:~:text=They%20can%20reduce%20emissions%20and,and%20have%20very%20good%20torque.&text=But%20EVs%20provide%20more%20than%20just%20individual%20benefits\n",
+    "[Young investors pile into stocks, seeing ‘generational-buying moment’ instead of risk](https://www.cnbc.com/2020/05/12/young-investors-pile-into-stocks-seeing-generational-buying-moment-instead-of-risk.html)\n",
     "\n",
     "<sup>2</sup>\n",
-    "https://www.researchgate.net/publication/215652750_Global_Climate_Change_A_cause_of_concern\n",
-    "\n",
-    "<sup>3</sup>\n",
-    "https://insideclimatenews.org/news/21122020/electric-vehicles-in-2020/"
+    "[How Robinhood and Covid opened the floodgates for 13 million amateur stock traders](https://www.researchgate.net/publication/215652750_Global_Climate_Change_A_cause_of_concern)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "judicial-bryan",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
